# simplerec

./: init_project.py
electron-app/: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.main.json
electron-app/src/main/: backend.ts  index.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/: index.html  main.tsx  vite.config.ts
electron-app/src/renderer/src/: App.tsx
electron-app/src/renderer/src/components/: FileList.tsx  Search.tsx  Settings.tsx  Statistics.tsx  UploadZone.tsx
electron-app/src/renderer/src/styles/: globals.css
electron-app/src/renderer/src/types/: api.ts  electron.d.ts
python-backend/: .env.example  .gitattributes  .gitignore  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_init.py
python-backend/app/: main.py
python-backend/app/api/v1/: router.py
python-backend/app/api/v1/endpoints/: bulk.py  documents.py  export.py  files.py  health.py  maintenance.py  ocr.py  search.py  settings.py  stats.py  system.py  upload.py  ws.py
python-backend/app/core/: cache.py  config.py  exceptions.py  logging.py
python-backend/app/db/: __init__.py  init_db.py  session.py
python-backend/app/schemas/: __init__.py  document.py  file.py  message.py
python-backend/app/services/: document_service.py  file_monitor.py  file_processor.py  search_service.py
python-backend/app/services/ocr/: __init__.py  base.py  easyocr_service.py  ocr_manager.py  paddleocr_service.py
python-backend/app/utils/: cleanup.py  hash_utils.py
python-backend/app/workers/: ocr_worker.py  queue_manager.py
python-backend/migrations/: env.py
python-backend/migrations/versions/: 2025_10_21_1113-477aa4e3a166_initial_database_schema.py
